A.F....... [ZBX-1357] updated Brazilian Portuguese, Japanese, Polish, Russian and Slovak translations; thanks to Zabbix translators (Richlv)
..F....... [ZBX-7399] improved multiselect by adding popup select window (Oleg)
..F....... [ZBX-8113] changed frontend configuration wizard to store info in session instead of cookies (Andrejs)

Bug fixes:
..F....... [ZBX-8378] fixed bar graphs to automatically resize vertically thus preventing broken charts when captions are very long (Krists)
..F....... [ZBX-8380] fixed disabled confirmation text label in "Administration/Scripts" for IE8 (Krists)
..F....... [ZBX-8370] fixed misc. bugs in barreports (input validation, default captions, caption escaping) (Andrejs)
..F....... [ZBX-8382] fixed trigger severity sound not stopping in user profile form on "Stop" button press (Ivo)
A......... [ZBX-8315] fixed host interface import (from 1.8 and up) to correctly create new or reuse existing interfaces (Krists)
...G...... [ZBX-8248] fixed vfs.file.regexp, vfs.file.regmatch and web.page.regexp to handle carriage returns properly (Juris)
..F....... [ZBX-7459] fixed saving and editing of regular expression having trailing, leading, or repeating spaces (Andrejs)
..F....... [ZBX-1268] fixed log trigger expression editor to show only usable sorting arrows (Andrejs)
..F....... [ZBX-8285] fixed widget "History of events" and frontend messaging to use visible host names (Krists)
A.F....... [ZBX-8151] fixed XXE vulnerability on XML import using obsolete libxml versions; thanks to pnig0s@Freebuf for the report (Andrejs)
..F....... [ZBX-8354] removed period in caption for "Distribution of values for multiple periods" bar report (Andrejs)
.......PS. [ZBX-8092] fixed items being polled at the same time after host becomes enabled (asaveljevs)
.......PS. [ZBX-8324] fixed there being too many expressions in a list in a SQL query (asaveljevs)
..F....... [ZBX-8355] changed confusing context for date format translations (Andrejs)