@@ -14,6 +14,7 @@ A.F....... [ZBX-1357] updated Brazilian Portuguese, Japanese, Polish, Russian an
 ..F....... [ZBX-8113] changed frontend configuration wizard to store info in session instead of cookies (Andrejs)
 
 Bug fixes:
+..F....... [ZBX-1215] changed captions of items and periods to be autogenerated by default in barreports (Andrejs)
 ..F....... [ZBX-8378] fixed bar graphs to automatically resize vertically thus preventing broken charts when captions are very long (Krists)
 ..F....... [ZBX-8380] fixed disabled confirmation text label in "Administration/Scripts" for IE8 (Krists)
 ..F....... [ZBX-8370] fixed misc. bugs in barreports (input validation, default captions, caption escaping) (Andrejs)
